--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
@@ -10,7 +10,7 @@
 
 <body>
 <!--form nhập-->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModalCreate">thêm mới</button>
+<button type="button" class="btn btn-success font-weight-bold" data-toggle="modal" data-target="#myModalCreate">thêm mới</button>
 <div class="modal" id="myModalCreate">
   <div class="modal-dialog mw-100 w-75" style="width: 1280px">
     <div class="modal-content col-12">
