--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-delete/employee-delete.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-delete/employee-delete.component.html
@@ -1,1 +1,9 @@
-<p>employee-delete works!</p>
+<h2>Bạn có muốn xoá nhân viên {{data}}</h2>
+<!--<mat-dialog-content>{{data}}</mat-dialog-content>-->
+
+<div class="float-end">
+  <button class="btn btn-secondary" mat-button mat-dialog-close (click)="closeDialog()">Cancel</button>
+  <button class="btn btn-danger" mat-button [mat-dialog-close]="true" (click)="delete()">Delete</button>
+</div>
+
+
