--- a/C0721G2-livestock-farm-FE/src/app/component/security/reset-password/reset-password.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/security/reset-password/reset-password.component.html
@@ -34,11 +34,11 @@
         <span class="text-danger">{{this.messageError}}</span>
       </div>
     </form>
-    <div class="text-center row mt-4 ">
-      <div class="col-12">
-        <span>Bạn chưa là thành viên?<a class="text-gradient text-head-login text-decoration-none"> Đăng ký </a>tại đây</span>
-      </div>
-    </div>
+<!--    <div class="text-center row mt-4 ">-->
+<!--      <div class="col-12">-->
+<!--        <span>Bạn chưa là thành viên?<a class="text-gradient text-head-login text-decoration-none"> Đăng ký </a>tại đây</span>-->
+<!--      </div>-->
+<!--    </div>-->
   </div>
 </div>
 
