--- a/C0721G2-livestock-farm-FE/src/app/component/security/verify-reset-password/verify-reset-password.component.scss
+++ b/C0721G2-livestock-farm-FE/src/app/component/security/verify-reset-password/verify-reset-password.component.scss
@@ -9,14 +9,14 @@
 .bg-gradient-info {
   background-image: linear-gradient(
       310deg
-    , #ff7f00 0%, #ffaa56 100%);
+    , #338f5b 0%, #13d133 100%);
 }
 
 .border-btn-login{
   border-radius: 7px;
 }
 .text-head-login{
-  background-image: linear-gradient(310deg, #ff7f00, #ffaa56)
+  background-image: linear-gradient(310deg, #338f5b, #13d133 )
 }
 .text-gradient {
   -webkit-background-clip: text;
