--- a/C0721G2-livestock-farm-FE/src/app/component/security/reset-password/reset-password.component.scss
+++ b/C0721G2-livestock-farm-FE/src/app/component/security/reset-password/reset-password.component.scss
@@ -34,7 +34,7 @@
 }
 
 .text-head-login{
-  background-image: linear-gradient(310deg, #ff7f00, #ffaa56)
+  background-image: linear-gradient(310deg, #338f5b, #13d133)
 }
 .btn.bg-gradient-info:hover{
   transform: scale(1.02);
@@ -42,7 +42,7 @@
 .bg-gradient-info {
   background-image: linear-gradient(
       310deg
-    , #ff7f00 0%, #ffaa56 100%);
+    , #338f5b 0%, #13d133 100%);
 }
 .input-height{
   border-radius: 8px;
