--- a/C0721G2-livestock-farm-FE/src/app/app.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/app.component.html
@@ -453,7 +453,7 @@
         </ul>
       </div>
     </div>
-   <div class="col-md-9">
+   <div class="col-12 col-md-10">
      <router-outlet></router-outlet>
    </div>
     <main>
