--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -108,7 +108,7 @@
                   </div>
                   <div class="col-xxl-2 col-xl-4 col-md-6 mb-3">
                     <select class="form-select" [(ngModel)]="status" [ngModelOptions]="{standalone: true}" aria-label="Default select example">
-                      <option selected>Tình trạng</option>
+                      <option value="">Tình trạng</option>
                       <option value="1">Có bệnh</option>
                       <option value="0">Không có bệnh</option>
                     </select>
@@ -120,7 +120,7 @@
                 </form>
                 <div class="row mb-3 mt-4">
                   <div class="col-12 text-end">
-                    <span class=" fst-italic mx-2">{{this.message}}</span>
+                    <span class=" fst-italic mx-2" *ngIf="this.message">{{this.message}}</span>
                     <a class="btn btn-success font-weight-bold">
                       Thêm mới cá thể
                     </a>
@@ -153,7 +153,7 @@
                         <td class="text-center align-middle">{{individual.weight}}</td>
                         <td class="align-middle text-center px-0">
                           <button class="btn btn-warning btn-responsive-margin-bottom text-white"><i class="fas fa-edit"></i> Sửa</button>
-                          <button class="btn btn-danger text-white mx-1" ><i class="fas fa-trash-alt"></i> Xóa</button>
+                          <button class="btn btn-danger text-white mx-1" (click)="openDialogDelete(individual.id)" ><i class="fas fa-trash-alt"></i> Xóa</button>
                         </td>
                       </tr>
                       </tbody>
@@ -161,18 +161,24 @@
                   </div>
                   <div class="">
                     <ul class="d-flex pagination pagination-sm justify-content-end " style="margin:20px 0">
-                      <li class="page-item"><a class="page-link bg-success" style="; color: white" href="#">Trước
-                        đó</a></li>
-                      <li class="page-item"><a class="page-link text-success"
-                                               href="#">1</a></li>
-                      <li class="page-item"><a class="page-link text-success"
-                                               href="#">2</a></li>
-                      <li class="page-item"><a class="page-link text-success"
-                                               href="#">3</a></li>
-                      <li class="page-item"><a class="page-link bg-success"
-                                               style="color: white"
-                                               href="#">Tiếp
-                        theo</a></li>
+                      <div *ngIf="this.page >0 then previous"></div>
+                      <ng-template #previous>
+                        <li class="page-item"><button class="page-link bg-success" style="; color: white" (click)="previousClick()">Trước
+                          đó</button></li>
+                      </ng-template>
+                      <li class="page-item">
+                        <input class="page-link" type="number" value="1" min="1" [max]="totalPages"
+                               placeholder="{{totalPages}}" aria-label="Username" [value]="page + 1"
+                               (change)="findPagination($event.target.value)">
+                      </li>
+                      <li class="page-item ">
+                        <span class="input-group-text page-link">{{page + 1}}/{{totalPages}}</span>
+                      </li>
+                      <div *ngIf="this.page  < this.totalPages-1 then next "></div>
+                      <ng-template #next>
+                        <li class="page-item"><button class="page-link bg-success" style="color: white" (click)="nextClick()">Tiếp
+                          theo</button></li>
+                      </ng-template>
                     </ul>
                   </div>
                 </div>
@@ -181,7 +187,6 @@
           </div>
         </div>
       </div>
-      <!--                </div>-->
     </div>
 
   </div>
