--- a/C0721G2-livestock-farm-FE/src/styles.css
+++ b/C0721G2-livestock-farm-FE/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/*style nay cua Hien*/
+.custom-dialog .mat-dialog-container {
+  padding: 0;
+  border-radius: 15px;
+}
