--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Thêm mới</title>
-  <link rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-</head>
-
-<body>
 <!--form nhập-->
-<button type="button" class="btn btn-success font-weight-bold" data-toggle="modal" data-target="#myModalCreate">thêm mới</button>
+<button type="button" class="btn btn-success font-weight-bold" data-toggle="modal" data-target="#myModalCreate">Thêm mới</button>
 <div class="modal" id="myModalCreate">
   <div class="modal-dialog mw-100 w-75" style="width: 1280px">
     <div class="modal-content col-12">
@@ -101,7 +91,7 @@
                 <div class="me-2 float-right">
                   <button class="btn btn-secondary customBtn" type="button" (click)="Reset()" data-dismiss="modal">Hủy</button>
                   <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal2"
-                     [disabled]="individualForm.invalid">thêm mới</button>
+                     [disabled]="individualForm.invalid">Thêm mới</button>
 <!--                  <p type="button" class="btn btn-success" data-toggle="modalCreate" data-target="#modal">Lưu</p>-->
                 </div>
               </div>
@@ -137,8 +127,3 @@
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-</html>
