--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Chỉnh sửa</title>
-  <link rel="stylesheet">
-  <!--    boostrap-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-</head>
 
-<body>
-
-<button type="button" class="btn btn-warning btn-responsive-margin-bottom text-white" data-toggle="modal" data-target="#myModaledit">Chỉnh sửa</button>
+<button type="button" class="btn btn-warning btn-responsive-margin-bottom text-white" data-toggle="modal" data-target="#myModaledit"><i class="fas fa-edit"></i> Sửa</button>
 <!--thẻ modal-->
 <div class="modal" id="myModaledit">
   <div class="modal-dialog mw-100 w-75" style="width: 1280px">
@@ -140,8 +129,3 @@
 
 </div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-</html>
