--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -121,9 +121,11 @@
                 <div class="row mb-3 mt-4">
                   <div class="col-12 text-end">
                     <span class=" fst-italic mx-2" *ngIf="this.message">{{this.message}}</span>
-                    <a class="btn btn-success font-weight-bold">
-                      Thêm mới cá thể
-                    </a>
+                    <app-individual-create></app-individual-create>
+
+<!--                    <a class="btn btn-success font-weight-bold" >-->
+<!--                      Thêm mới cá thể-->
+<!--                    </a>-->
                   </div>
                 </div>
                 <div class="row">
@@ -152,7 +154,8 @@
                         <td class="text-center align-middle" *ngIf="individual.status == '0' ">Không có bệnh</td>
                         <td class="text-center align-middle">{{individual.weight}}</td>
                         <td class="align-middle text-center px-0">
-                          <button class="btn btn-warning btn-responsive-margin-bottom text-white"><i class="fas fa-edit"></i> Sửa</button>
+                          <app-individual-edit [currentId]="individual.id"></app-individual-edit>
+                          <!--                          <button class="btn btn-warning btn-responsive-margin-bottom text-white"><i class="fas fa-edit"></i> Sửa</button>-->
                           <button class="btn btn-danger text-white mx-1" (click)="openDialogDelete(individual.id)" ><i class="fas fa-trash-alt"></i> Xóa</button>
                         </td>
                       </tr>
