--- a/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
@@ -17,9 +17,11 @@
         <div class="container ">
           <h1 class="d-flex justify-content-center pt-3 text-success">Danh sách khám chữa
             trị</h1>
+
           <div class="row pt-2 ">
             <div class=" ">
               <div class=" fw-bold float-start">
+
                 <button class="btn  btn-success " routerLink="/treatement/create">
                   Thêm mới lịch khám
                 </button>
@@ -53,13 +55,13 @@
                     </button>
                   </div>
                 </div>
-
               </form>
-
             </div>
           </div>
-
+          <span class="d-flex justify-content-center pt-3" style="color: red" *ngIf="this.message; else showtable">{{this.message}}</span>
+          <ng-template #showtable>
           <div class="">
+
             <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
 
               <table class="table table-striped table-hover ">
@@ -77,6 +79,7 @@
                   <th class="text-center ">Xoá</th>
                 </tr>
                 </thead>
+
                 <tbody>
                 <tr *ngFor="let treatement of treatements;let i = index" [attr.data-index]="i">
                   <td>{{i+1}}</td>
@@ -184,6 +187,7 @@
               </div>
             </div>
           </div>
+          </ng-template>
         </div>
       </div>
     </div>
