--- a/C0721G2-livestock-farm-FE/src/app/component/security/verify-reset-password/verify-reset-password.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/security/verify-reset-password/verify-reset-password.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 250px">
   <div class="row">
     <div class="col-sm-5 col-xs-12 mx-auto">
       <div class="card my-5">
