--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-create/individual-create.component.html
@@ -1,7 +1,9 @@
 
 <!--form nhập-->
-<button type="button" class="btn btn-success font-weight-bold" data-toggle="modal" data-target="#myModalCreate">Thêm mới</button>
-<div class="modal" id="myModalCreate">
+<button type="button" class="btn btn-success font-weight-bold" data-bs-toggle="modal" data-bs-target="#myModalCreate">Thêm mới</button>
+<span [class.alert-danger]="message" (message)="message" [textContent]="message">{{'message'}}</span><!--thẻ modal-->
+
+<div class="modal" id="myModalCreate" style="text-align: left">
   <div class="modal-dialog mw-100 w-75" style="width: 1280px">
     <div class="modal-content col-12">
       <div class="card mb-8">
@@ -61,7 +63,7 @@
               <label for="position-relative" class="form-label">Tình trạng <span
                 style="color: red">(*)</span></label>
               <br>
-              <select id="position-relative" class="custom-select" aria-label="Default select example" formControlName="status">
+              <select id="position-relative" class="form-control" aria-label="Default select example" formControlName="status">
                 <option Value="null">Lựa chọn trạng thái</option>
                 <option value="0">Bệnh</option>
 <!--                <option value="2">Đang Nuôi</option>-->
@@ -84,13 +86,15 @@
             <!--              <label for="note" class="form-label">Ghi chú</label>-->
             <!--              <textarea type="text" class="form-control" id="note"></textarea>-->
             <!--            </div>-->
+            <button type="button" class="btn btn-success">Thêm hàng loạt</button>
+
             <br>
             <div class="modal-footer col-12">
               <div class="btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
                    aria-label="Toolbar with button groups">
                 <div class="me-2 float-right">
-                  <button class="btn btn-secondary customBtn" type="button" (click)="Reset()" data-dismiss="modal">Hủy</button>
-                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal2"
+                  <button class="btn btn-secondary customBtn" type="button" (click)="Reset()" data-bs-dismiss="modal">Hủy</button>
+                  <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modal2"
                      [disabled]="individualForm.invalid">Thêm mới</button>
 <!--                  <p type="button" class="btn btn-success" data-toggle="modalCreate" data-target="#modal">Lưu</p>-->
                 </div>
@@ -106,21 +110,22 @@
 <!--modal hiện xác nhận-->
 
 <div class="modal fade" id="modal2" role="dialog" tabindex="-1" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
+     aria-hidden="true" style="text-align: left">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header btn-danger">
         <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>
-        <button type="button" class="" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Bạn có muốn thêm cá thể mới cá thể
+        <p>Bạn có muốn thêm cá thể mới cá thể</p>
+        <p>{{individual.id}}</p>
         <span style="color:red"></span>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-success " (click)="onSubmit()" [routerLink]="['/individual/list']">Xác nhận</button>
       </div>
     </div>
