--- a/C0721G2-livestock-farm-FE/src/app/component/share/header/header.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/share/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fs-6 main-bg fixed-top " style="height: 5rem">
   <div class="container-fluid">
-    <a class="navbar-brand col-md-3 col-lg-2 px-3 " href="">
+    <a class="navbar-brand col-md-3 col-lg-2 px-3 " routerLink="/home">
       <img class="" width="90%"
            src="https://fv9-2.failiem.lv/thumb_show.php?i=jp53m5a92&view" alt="">
     </a>
