--- a/C0721G2-livestock-farm-FE/src/app/component/security/login/login.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/security/login/login.component.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="mb-3 row ">
                   <div class=" col-sm-6 col-xs-12 form-check form-switch d-inline">
-                    <input type="checkbox" width="" class="form-check-input fs-6  "
+                    <input type="checkbox" formControlName="remember_me" class="form-check-input fs-6  "
                            id="remember_me">
                     <label class="form-check-label mx-1" for="remember_me">Nhớ tài khoản</label>
 
