--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -122,7 +122,7 @@
                   <div class="col-12 text-end">
                     <span class=" fst-italic mx-2" *ngIf="this.message">{{this.message}}</span>
                     <app-individual-create></app-individual-create>
-                    <app-individual-edit></app-individual-edit>
+<!--                    <app-individual-edit [currentId]="'IN-0007'"></app-individual-edit>-->
                   </div>
                 </div>
                 <div class="row">
