--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
@@ -1,6 +1,8 @@
-
-<button type="button" class="btn btn-warning btn-responsive-margin-bottom text-white" data-bs-toggle="modal" data-bs-target="#myModaledit"><i class="fas fa-edit"></i> Sửa</button>
 <span [class.alert-danger]="message" (message)="message" [textContent]="message">{{'message'}}</span><!--thẻ modal-->
+<br>
+<button type="button" class="btn btn-warning btn-responsive-margin-bottom text-white" data-bs-toggle="modal"
+        data-bs-target="#myModaledit"><i class="fas fa-edit"></i> Sửa
+</button>
 <div class="modal" id="myModaledit" style="text-align: left">
   <div class="modal-dialog mw-100 w-75" style="width: 1280px">
     <div class="modal-content col-12">
@@ -13,7 +15,8 @@
           <p class="text-success"></p>
         </div>
         <div class="modal-body">
-          <form class="form-group row g-3 needs-validation m-3" [formGroup]="individualForm" (ngSubmit)="onSubmit()" method="post">
+          <form class="form-group row g-3 needs-validation m-3" [formGroup]="individualForm" (ngSubmit)="onSubmit()"
+                method="post">
             <div class="col-md-6 position-relative">
               <label for="code" class="form-label">Mã cá thể <span
                 style="color: red">(*)</span></label>
@@ -27,12 +30,14 @@
             </div>
 
             <div class="col-md-6 position-relative">
-              <label for="sheet" class="form-label">Mã chuồng nuôi <span
+              <label for="machuong" class="form-label">Mã chuồng nuôi <span
                 style="color: red">(*)</span></label>
-              <input type="text" id="sheet" class="form-control" value="CA-0001">
-              <!--                          <small class="fst-italic" style="color: red"-->
-              <!--                                 *ngIf="individualForm.controls.dirty && individualForm.controls.id.hasError('required')">Mã chuồng không được để trống</small>-->
-              <!--                          <small class="fst-italic" style="color: red">Phải đúng định dạng MC-XXXX</small>-->
+              <select id="machuong" class="form-select" aria-label="Default select example"
+                      formControlName="cage" name="positionDTO">
+                <option [ngValue]="null">--Chọn--</option>
+                <option *ngFor="let item of cage"
+                        [ngValue]="item">{{item.id}}</option>
+              </select>
             </div>
 
             <div class="col-md-6 position-relative">
@@ -46,14 +51,14 @@
               <!--              <small class="fst-italic" style="color: red">không được là ngày quá khứ</small>-->
             </div>
             <div class="col-md-6 position-relative">
-            <label for="dateout" class="form-label">Ngày xuất chuồng <span
-              style="color: red">(*)</span></label>
-            <input type="date" id="dateout" class="form-control" formControlName="dateOut">
-            <small class="fst-italic" style="color: red"
-                   *ngIf="individualForm.controls.dateOut.dirty &&individualForm.controls.dateOut.hasError('required')">
-              Ngày xuất chuồng không được để trống</small>
-            <!--              <small class="fst-italic" style="color: red">không được là ngày quá khứ</small>-->
-          </div>
+              <label for="dateout" class="form-label">Ngày xuất chuồng <span
+                style="color: red">(*)</span></label>
+              <input type="date" id="dateout" class="form-control" formControlName="dateOut">
+              <small class="fst-italic" style="color: red"
+                     *ngIf="individualForm.controls.dateOut.dirty &&individualForm.controls.dateOut.hasError('required')">
+                Ngày xuất chuồng không được để trống</small>
+              <!--              <small class="fst-italic" style="color: red">không được là ngày quá khứ</small>-->
+            </div>
 
             <div class="col-md-6 position-relative ">
               <label for="position-relative" class="form-label" formControlName="status">Tình trạng <span
@@ -85,9 +90,16 @@
               <div class="btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
                    aria-label="Toolbar with button groups">
                 <div class="me-2 float-right">
-                  <button class="btn btn-secondary customBtn" type="button" (click)="Reset()" data-bs-dismiss="modal">Hủy
-                  </button>
-                  <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#myModaledit2">Chỉnh sửa</button>
+                  <div class="btn-group me-2">
+                    <button class="btn btn-secondary customBtn" type="button" (click)="Reset()" data-bs-dismiss="modal">
+                      Hủy
+                    </button>
+                  </div>
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#myModaledit2">
+                      Chỉnh sửa
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -99,7 +111,8 @@
 </div>
 
 
-<div class="modal fade" id="myModaledit2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="text-align: left">
+<div class="modal fade" id="myModaledit2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+     style="text-align: left">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header btn-danger">
@@ -114,18 +127,17 @@
         <font size="3"> <span style="color: red">Các thông tin cũ sẽ bị mất</span></font>
       </div>
       <div class="modal-footer">
-
         <!--                <font size="3"> <span style="color: red">warning</span></font>-->
-
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal2">Đóng</button>
-        <button type="button" class="btn btn-warning" (click)="onSubmit()" data-bs-dismiss="modal" data-bs-target="#modal3"
-          data-toggle="modal">Xác nhận</button>
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+        </div>
+        <div class="btn-group">
+          <button type="button" class="btn btn-warning" (click)="onSubmit()" data-bs-dismiss="modal"
+                  data-bs-target="#modal3"
+                  data-bs-toggle="modal">Xác nhận
+          </button>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-<div class="modal" id="modal3">
-
-</div>
-
